# ai-sector-watch

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  PROJECT_PROGRESS.md  README.md  Sector_Map_Kickoff_Prompt.md  Sector_Map_PRD.md  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.streamlit/: config.toml
dashboard/: streamlit_app.py
docs/: deployment.md  design-system.md  multi-agent-workflow.md  operations.md  sources.md  taxonomy.md
prompts/: verify_sector.md
scripts/: apply_company_profile_updates.py  apply_company_rejections.py  apply_cut_through_import.py  audit_company_descriptions.py  audit_company_locations.py  audit_company_profiles.py  backfill_enrichment.py  discover_cut_through_reports.py  dump_verified_companies.py  extract_cut_through_report.py  finish_issue.sh  generate_verification_prompts.py  parse_verification_responses.py  run_research_brief.py  run_weekly_pipeline.py  seed_companies.py  start_issue.sh  verify_setup.py
tests/: test_apply_company_profile_updates.py  test_apply_company_rejections.py  test_audit_company_descriptions.py  test_audit_company_locations.py  test_audit_company_profiles.py  test_backfill_enrichment.py  test_config.py  test_cut_through_import.py  test_dashboard_theme.py  test_data_source.py  test_deployment_docs.py  test_dump_verified_companies.py  test_extraction.py  test_filters.py  test_firecrawl.py  test_generate_verification_prompts.py  test_geocoder.py  test_map_view.py  test_parse_verification_responses.py  test_pipeline_integration.py  test_research_briefs.py  test_research_workflow_static.py  (+7 more)
(+153 files in other folders)
