[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sector-watch"
version = "0.1.0"
description = "Live, public-facing ecosystem map of the Australian and New Zealand AI startup landscape, updated weekly by an automated agent pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Sam Clifton" }]
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.11",
    "arxiv>=2.1.3",
    "firecrawl-py>=2.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.45.0",
    "streamlit-folium>=0.22.0",
    "streamlit-extras>=0.4.7",
    "streamlit-shadcn-ui>=0.1.18",
    "folium>=0.17.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_sector_watch.storage" = ["supabase_schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
